fix(components): handle overflow in `Modal` (#1612)
* fix(components): handle overflow in `Modal`

* fix: chromatic settings

--- a/packages/components/src/styles/ListBox.module.css
+++ b/packages/components/src/styles/ListBox.module.css
@@ -1,5 +1,4 @@
 .box {
-	--lp-menu-max-width: none;
 	composes: menu from './Menu.module.css';
 }
 
